fix: overflow in chrome

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -3,6 +3,7 @@
 html {
   font-size: 62.5%; // 10px
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 *,
